--- a/index.html
+++ b/index.html
@@ -2,197 +2,240 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Customer Care AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Customer Care AI — Hands-Free Voice</title>
   <style>
     :root { color-scheme: dark; }
-    body{margin:0;font-family:Arial,system-ui;background:#0f0f0f;color:#fff;display:grid;place-items:center;min-height:100vh}
-    .wrap{width:min(980px,92vw);background:#121212;border-radius:18px;box-shadow:0 18px 60px rgba(0,0,0,.6);padding:18px}
-    .top{display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap}
-    .title{font-weight:700;font-size:20px}
-    .btn{border:0;border-radius:12px;padding:10px 14px;font-weight:700;cursor:pointer}
-    .btn.primary{background:#ffb020;color:#111}
-    .btn.ghost{background:#2a2a2a;color:#fff}
-    .pill{background:#222;border-radius:999px;padding:8px 12px;font-weight:700}
-    .panel{margin-top:14px;background:#0e0e0e;border:1px solid #242424;border-radius:14px;padding:14px}
-    #convoLog{height:260px;overflow:auto;background:#0b0b0b;border:1px solid #262626;border-radius:12px;padding:12px;white-space:pre-wrap}
-    .hint{opacity:.8;margin-top:10px;font-size:13px}
-    .row{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:14px}
-    .row input,.row textarea{width:100%;padding:12px;border-radius:12px;border:1px solid #2a2a2a;background:#0b0b0b;color:#fff}
-    .row textarea{grid-column:1/-1;min-height:80px;resize:vertical}
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#0b0b0b; color:#fff; }
+    .wrap { width:min(980px, 94vw); margin:20px auto; padding:18px; border-radius:18px; background:#121212; box-shadow:0 18px 60px rgba(0,0,0,.65); }
+    .top { display:flex; gap:10px; align-items:center; justify-content:space-between; flex-wrap:wrap; }
+    .title { font-weight:800; font-size:20px; }
+    .controls { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
+    .btn { border:0; border-radius:12px; padding:10px 14px; font-weight:700; cursor:pointer; }
+    .btn.primary { background:#ffb020; color:#111; }
+    .btn.ghost { background:#2a2a2a; color:#fff; }
+    .pill { background:#232323; padding:8px 12px; border-radius:999px; font-weight:700; opacity:.95; }
+    .panel { margin-top:14px; background:#0f0f0f; border:1px solid #222; border-radius:16px; padding:14px; }
+    #log { height:260px; overflow:auto; background:#0b0b0b; border:1px solid #222; border-radius:12px; padding:10px; }
+    .line { margin:0 0 8px 0; opacity:.95; }
+    .sys { color:#ff6b6b; }
+    .you { color:#9ad1ff; }
+    .ai  { color:#9cffb6; }
+    .hint { opacity:.8; margin-top:10px; font-size:13px; }
+    .grid { display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:14px; }
+    .grid input, .grid textarea {
+      width:100%; box-sizing:border-box;
+      background:#101010; border:1px solid #2a2a2a; color:#fff;
+      border-radius:12px; padding:10px 12px; outline:none;
+    }
+    .grid textarea { grid-column: 1 / -1; min-height:90px; resize:vertical; }
+    @media (max-width:780px) { .grid { grid-template-columns: 1fr; } }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <div class="top">
       <div class="title">Customer Care AI — Hands-Free Voice</div>
-      <div style="display:flex;gap:10px;align-items:center;flex-wrap:wrap">
-        <button id="btnEnable" class="btn primary">Enable Voice (1x)</button>
-        <button id="btnStop" class="btn ghost">Stop</button>
+      <div class="controls">
+        <button id="enableBtn" class="btn primary">Enable Voice (1x)</button>
+        <button id="stopBtn" class="btn ghost">Stop</button>
         <div id="statusPill" class="pill">Status: idle</div>
       </div>
     </div>
 
     <div class="panel">
-      <div style="font-weight:700;margin-bottom:8px">Conversation</div>
-      <div id="convoLog"></div>
-      <div class="hint">Goal: press Enable once → speak naturally → it auto-sends when you stop talking → replies → goes back to listening.</div>
+      <div style="font-weight:800; margin-bottom:8px;">Conversation</div>
+      <div id="log" aria-live="polite"></div>
+      <div class="hint">
+        Goal: press Enable once → speak → it auto-sends after you stop talking → reply → goes back to listening.
+      </div>
     </div>
 
     <div class="panel">
-      <div style="font-weight:700;margin-bottom:8px">Lead Capture (optional)</div>
-      <div class="row">
-        <input placeholder="First name" />
-        <input placeholder="Last name" />
-        <input placeholder="Email" />
-        <input placeholder="Phone" />
-        <textarea placeholder="Notes"></textarea>
+      <div style="font-weight:800; margin-bottom:8px;">Lead Capture (optional)</div>
+      <div class="grid">
+        <input id="first" placeholder="First name" autocomplete="given-name" />
+        <input id="last" placeholder="Last name" autocomplete="family-name" />
+        <input id="email" placeholder="Email" autocomplete="email" />
+        <input id="phone" placeholder="Phone" autocomplete="tel" />
+        <textarea id="notes" placeholder="Notes"></textarea>
       </div>
-      <button class="btn ghost" style="margin-top:10px;width:100%">Submit</button>
+      <button class="btn ghost" style="width:100%; margin-top:10px;" id="submitLead">Submit</button>
     </div>
   </div>
 
   <script>
-  /* ============================================================
-     CUSTOMER CARE AI — VOICE CAPTURE FIX (ANDROID/CHROME SAFE)
-     - Uses SpeechRecognition OR webkitSpeechRecognition fallback
-     - Hands-free loop: listens -> emits final transcript -> keeps listening
-     - Prevents duplicate starts
-     ============================================================ */
+    // ---------- Helpers ----------
+    const $ = (id) => document.getElementById(id);
 
-  (() => {
-    const $ = (sel) => document.querySelector(sel);
+    const logEl = $("log");
+    const statusPill = $("statusPill");
+    function setStatus(t){ statusPill.textContent = "Status: " + t; }
 
-    const convo = $("#convoLog");
-    const statusPill = $("#statusPill");
-    const btnEnable = $("#btnEnable");
-    const btnStop = $("#btnStop");
-
-    function setStatus(text){ statusPill.textContent = `Status: ${text}`; }
-    function logLine(label, text, color){
-      const line = document.createElement("div");
-      line.style.margin = "6px 0";
-      line.style.color = color || "#ddd";
-      line.textContent = `${label}: ${text}`;
-      convo.appendChild(line);
-      convo.scrollTop = convo.scrollHeight;
+    function addLine(kind, text){
+      const p = document.createElement("p");
+      p.className = "line " + kind;
+      p.textContent = (kind === "sys" ? "System: " : kind === "you" ? "You: " : "AI: ") + text;
+      logEl.appendChild(p);
+      logEl.scrollTop = logEl.scrollHeight;
     }
-    const logSystem = (t)=>logLine("System", t, "#ff4d4d");
-    const logYou    = (t)=>logLine("You", t, "#d6b56a");
-    const logAI     = (t)=>logLine("AI", t, "#cfcfcf");
 
+    // ---------- Speech Recognition (Android Chrome safe) ----------
     const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SpeechRecognition){
-      logSystem("SpeechRecognition not supported on this device/browser.");
-      setStatus("not supported");
-      return;
-    }
+    let rec = null;
 
-    let recognition = null;
     let enabled = false;
-    let stopping = false;
-    let isRunning = false;
+    let inLoop = false;        // prevents double start
+    let finalText = "";
+    let lastHeardAt = 0;
+    let silenceTimer = null;
 
-    let lastFinalAt = 0;
-    let lastFinalText = "";
+    const END_SILENCE_MS = 900;  // auto-send after you stop talking
+    const RESTART_DELAY_MS = 250;
 
-    async function sendToAI(text){
-      // Placeholder so you can confirm mic works FIRST.
-      logAI(`(placeholder) heard: "${text}"`);
+    function clearSilenceTimer(){
+      if(silenceTimer){ clearTimeout(silenceTimer); silenceTimer = null; }
     }
 
-    function buildRecognition(){
+    function scheduleSendAfterSilence(){
+      clearSilenceTimer();
+      silenceTimer = setTimeout(() => {
+        // if we haven't heard anything recently, treat as end-of-utterance
+        const now = Date.now();
+        if(now - lastHeardAt >= END_SILENCE_MS - 50){
+          stopListeningAndSend();
+        }
+      }, END_SILENCE_MS);
+    }
+
+    function supportsSpeech(){
+      return !!SpeechRecognition;
+    }
+
+    function buildRec(){
       const r = new SpeechRecognition();
       r.lang = "en-AU";
-      r.continuous = true;
       r.interimResults = true;
-      r.maxAlternatives = 1;
-
-      r.onstart = () => {
-        isRunning = true;
-        setStatus("listening");
-        logSystem("Mic is LIVE. Speak naturally.");
-      };
-
-      r.onerror = (e) => {
-        const err = (e && e.error) ? e.error : "unknown";
-        logSystem(`Voice error: ${err}`);
-        setStatus(`error: ${err}`);
-      };
-
-      r.onend = () => {
-        isRunning = false;
-        if (enabled && !stopping){
-          setStatus("restarting...");
-          setTimeout(() => {
-            try { r.start(); } catch (_) { setTimeout(()=>{ try{ r.start(); }catch(_){} }, 300); }
-          }, 250);
-        } else {
-          setStatus("stopped");
-        }
-      };
-
-      let finalBuffer = "";
-
-      r.onresult = (event) => {
-        for (let i = event.resultIndex; i < event.results.length; i++){
-          const res = event.results[i];
-          const txt = (res[0] && res[0].transcript) ? res[0].transcript : "";
-          if (res.isFinal) finalBuffer += txt;
-        }
-
-        const finalText = finalBuffer.trim();
-        if (!finalText) return;
-
-        const now = Date.now();
-        if (finalText === lastFinalText && (now - lastFinalAt) < 1200){
-          finalBuffer = "";
-          return;
-        }
-
-        lastFinalText = finalText;
-        lastFinalAt = now;
-        finalBuffer = "";
-
-        logYou(finalText);
-        sendToAI(finalText).catch(()=>logSystem("AI call failed (sendToAI)."));
-      };
-
+      r.continuous = true; // best chance on Android; may still behave as non-continuous.
       return r;
     }
 
-    function enableVoiceOnce(){
-      if (enabled && isRunning){
-        logSystem("Already listening.");
+    function startListening(){
+      if(!enabled) return;
+      if(!rec) rec = buildRec();
+      if(inLoop) return;
+
+      try{
+        finalText = "";
+        inLoop = true;
+        setStatus("listening");
+        addLine("sys", "Mic is LIVE. Speak naturally.");
+
+        rec.onresult = (event) => {
+          lastHeardAt = Date.now();
+          scheduleSendAfterSilence();
+
+          let interim = "";
+          for(let i = event.resultIndex; i < event.results.length; i++){
+            const txt = event.results[i][0].transcript;
+            if(event.results[i].isFinal) finalText += (finalText ? " " : "") + txt.trim();
+            else interim += txt;
+          }
+          // We don't print interim every time (avoids spam). We only print when sending.
+        };
+
+        rec.onerror = (e) => {
+          inLoop = false;
+          clearSilenceTimer();
+          setStatus("error");
+          addLine("sys", "Voice error: " + (e && e.error ? e.error : "unknown"));
+        };
+
+        rec.onend = () => {
+          // Android sometimes ends the mic automatically. If still enabled, restart.
+          clearSilenceTimer();
+          inLoop = false;
+          if(enabled){
+            setStatus("restarting");
+            setTimeout(() => {
+              if(enabled) startListening();
+            }, RESTART_DELAY_MS);
+          } else {
+            setStatus("idle");
+          }
+        };
+
+        rec.start();
+      } catch(err){
+        inLoop = false;
+        clearSilenceTimer();
+        setStatus("error");
+        addLine("sys", "Start failed: " + (err && err.message ? err.message : String(err)));
+      }
+    }
+
+    function stopListeningHard(){
+      enabled = false;
+      clearSilenceTimer();
+      try { rec && rec.stop && rec.stop(); } catch {}
+      setStatus("idle");
+    }
+
+    function stopListeningAndSend(){
+      // stop the mic first (prevents it capturing its own output)
+      clearSilenceTimer();
+      const text = (finalText || "").trim();
+      finalText = "";
+
+      // Some Android builds need stop() to finalize; we stop either way.
+      try { rec && rec.stop && rec.stop(); } catch {}
+
+      if(text){
+        addLine("you", text);
+        // TODO: wire to /api/chat later.
+        addLine("ai", "OK — received. (Next: connect to /api/chat)");
+      } else {
+        addLine("sys", "No speech captured. If this repeats: check site mic permission + HTTPS + not in incognito.");
+      }
+    }
+
+    // ---------- UI ----------
+    $("enableBtn").addEventListener("click", async () => {
+      if(!supportsSpeech()){
+        addLine("sys", "SpeechRecognition not supported on this browser.");
         return;
       }
-      enabled = true;
-      stopping = false;
-      if (!recognition) recognition = buildRecognition();
-
-      try {
-        recognition.start();
-        logSystem("Voice enabled. Hands-free loop is ON.");
-      } catch (_) {
-        logSystem("Enable pressed. If nothing happens, press Stop then Enable again.");
+      if(enabled){
+        addLine("sys", "Already enabled. If it’s stuck, press Stop then Enable once.");
+        return;
       }
-    }
 
-    function stopVoice(){
-      stopping = true;
-      enabled = false;
-      setStatus("stopping...");
-      try { recognition && recognition.stop(); } catch (_) {}
-      logSystem("Stopped.");
-    }
+      // Must be user-gesture on mobile: click -> start.
+      enabled = true;
+      setStatus("permission/listening");
+      addLine("sys", "Voice enabled. Hands-free loop is ON.");
+      startListening();
+    });
 
-    btnEnable.addEventListener("click", enableVoiceOnce);
-    btnStop.addEventListener("click", stopVoice);
+    $("stopBtn").addEventListener("click", () => {
+      stopListeningHard();
+      addLine("sys", "Stopped.");
+    });
 
+    $("submitLead").addEventListener("click", () => {
+      const payload = {
+        first: $("first").value.trim(),
+        last: $("last").value.trim(),
+        email: $("email").value.trim(),
+        phone: $("phone").value.trim(),
+        notes: $("notes").value.trim(),
+      };
+      addLine("sys", "Lead saved locally (demo): " + JSON.stringify(payload));
+    });
+
+    // Initial
     setStatus("idle");
-    logSystem("Ready. Press Enable Voice (1x).");
-  })();
+    addLine("sys", "Tap Enable Voice once. Don’t tap repeatedly.");
   </script>
 </body>
-</html>
+</html> 
