--- a/wow-demo.html
+++ b/wow-demo.html
@@ -1,362 +1,361 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>3D Cinematic Experience — Voice Only</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>WOW Cinematic</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/postprocessing/RenderPass.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/postprocessing/ShaderPass.js"></script>
 
-  <style>
-    body { margin:0; overflow:hidden; background:#000; }
-    canvas { display:block; }
-
-    /* Voice HUD */
-    #hud{
-      position:fixed; top:16px; left:16px; right:16px; z-index:999;
-      display:flex; gap:10px; align-items:center; flex-wrap:wrap;
-      font-family:Arial,system-ui,sans-serif;
-    }
-    .btn{
-      border:0; border-radius:12px; padding:10px 14px;
-      font-weight:800; cursor:pointer;
-    }
-    .primary{ background:#ffb020; color:#111; }
-    .ghost{ background:#2a2a2a; color:#fff; }
-    .pill{
-      background:rgba(20,20,20,.88);
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:999px;
-      padding:8px 12px;
-      font-size:13px;
-      font-weight:800;
-      color:#fff;
-      white-space:nowrap;
-    }
-
-    /* Lead input (destroyed) */
-    #inputBox{
-      position:fixed; top:50%; left:50%;
-      transform:translate(-50%, -50%) scale(1);
-      z-index:300;
-      padding:18px;
-      background:rgba(255,255,255,0.86);
-      border-radius:14px;
-      box-shadow:0 0 30px rgba(0,0,0,0.65);
-      will-change: transform, opacity;
-    }
-    #leadInput{
-      width:min(380px, 74vw);
-      padding:12px 14px;
-      border-radius:12px;
-      border:1px solid rgba(0,0,0,.2);
-      outline:none;
-      font-size:16px;
-    }
-
-    /* Door */
-    #door{
-      position:fixed;
-      top:50%; left:50%;
-      transform:translate(-50%, -50%) scale(0);
-      width:320px; height:520px;
-      background:linear-gradient(45deg, #1a1a2e, #16213e);
-      border:4px solid rgba(255,255,255,.86);
-      border-radius:14px;
-      z-index:350;
-      transition:transform 1100ms ease-out;
-      box-shadow:0 0 60px rgba(0,255,255,0.55);
-    }
-  </style>
+<style>
+body { margin:0; overflow:hidden; background:#000; }
+canvas { display:block; }
+</style>
 </head>
-
 <body>
-  <div id="hud">
-    <button id="btnStartVoice" class="btn primary">Start Voice</button>
-    <button id="btnStopVoice" class="btn ghost">Stop</button>
-    <div id="status" class="pill">Status: idle</div>
-  </div>
-
-  <div id="inputBox">
-    <input id="leadInput" type="text" placeholder="Enter your email..." />
-  </div>
-
-  <div id="door"></div>
-
-  <!-- OpenAI audio out -->
-  <audio id="remoteAudio" autoplay></audio>
-
 <script>
-(() => {
-  // =========================================================
-  // THREE.JS SCENE (CINEMATIC)
-  // =========================================================
-  const scene = new THREE.Scene();
-  scene.fog = new THREE.Fog(0x000000, 30, 220);
 
-  const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 2000);
-  camera.position.set(0, 8, 22);
+/* ================= BASIC ================= */
 
-  const renderer = new THREE.WebGLRenderer({ antialias:true });
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  renderer.setPixelRatio(Math.min(window.devicePixelRatio || 1, 2));
-  document.body.appendChild(renderer.domElement);
+const scene = new THREE.Scene();
+scene.fog = new THREE.Fog(0x000000,20,200);
 
-  const controls = new THREE.OrbitControls(camera, renderer.domElement);
-  controls.enableDamping = true;
-  controls.enablePan = false;
-  controls.minDistance = 10;
-  controls.maxDistance = 65;
-  controls.maxPolarAngle = Math.PI * 0.47;
+const camera = new THREE.PerspectiveCamera(
+  70,
+  window.innerWidth/window.innerHeight,
+  0.1,
+  2000
+);
+camera.position.set(0,2,18);
 
-  scene.add(new THREE.AmbientLight(0x404040, 1.3));
-  const dir = new THREE.DirectionalLight(0xffffff, 1.2);
-  dir.position.set(10, 15, 8);
-  scene.add(dir);
+const renderer = new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
+renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
+document.body.appendChild(renderer.domElement);
 
-  // Simple sky sphere
-  const sky = new THREE.Mesh(
-    new THREE.SphereGeometry(600, 32, 16),
-    new THREE.MeshBasicMaterial({ color: 0x05070f, side: THREE.BackSide })
+window.addEventListener('resize',()=>{
+  camera.aspect=window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth,window.innerHeight);
+});
+
+/* ================= LIGHT ================= */
+
+scene.add(new THREE.AmbientLight(0x404040,1.2));
+
+const dir = new THREE.DirectionalLight(0xffffff,1.4);
+dir.position.set(10,20,10);
+scene.add(dir);
+
+const impactLight = new THREE.PointLight(0x00ffff,0,30);
+impactLight.position.set(0,3,-6);
+scene.add(impactLight);
+
+/* ================= WALL ================= */
+
+const wall = new THREE.Group();
+scene.add(wall);
+
+const shards=[];
+const seg=20;
+const size=14/seg;
+
+for(let x=-seg/2;x<seg/2;x++){
+  for(let y=-seg/2;y<seg/2;y++){
+    const shard=new THREE.Mesh(
+      new THREE.BoxGeometry(size,size,0.6),
+      new THREE.MeshStandardMaterial({color:0x111111,roughness:0.9})
+    );
+    shard.position.set(x*size,y*size,-6);
+    shard.userData={vel:new THREE.Vector3(),broken:false};
+    wall.add(shard);
+    shards.push(shard);
+  }
+}
+
+/* ================= ROBOT ================= */
+
+const robot=new THREE.Group();
+scene.add(robot);
+robot.position.set(0,0,-8);
+robot.scale.setScalar(0.01);
+
+const mat=new THREE.MeshStandardMaterial({
+  color:0x222222,
+  emissive:0x00ffff,
+  emissiveIntensity:0.6,
+  metalness:1,
+  roughness:0.2
+});
+
+const core=new THREE.Mesh(
+  new THREE.CylinderGeometry(1.5,1.5,2.5,32),
+  mat
+);
+robot.add(core);
+
+const arms=[];
+for(let i=0;i<6;i++){
+  const pivot=new THREE.Group();
+  const arm=new THREE.Mesh(
+    new THREE.BoxGeometry(0.4,3,0.4),
+    mat
   );
-  scene.add(sky);
+  arm.position.y=2;
+  pivot.add(arm);
+  pivot.rotation.y=(i/6)*Math.PI*2;
+  robot.add(pivot);
+  arms.push(pivot);
+}
 
-  // Satellites (orbiting particles)
-  const satellites = [];
-  function createSatellites() {
-    const g = new THREE.SphereGeometry(0.25, 16, 16);
-    const m = new THREE.MeshStandardMaterial({ color:0x00ffff, emissive:0x003333, roughness:0.25, metalness:0.1 });
-    for (let i = 0; i < 18; i++) {
-      const s = new THREE.Mesh(g, m);
-      s.userData = {
-        radius: 4 + Math.random() * 3,
-        speed: 0.7 + Math.random() * 1.0,
-        phase: Math.random() * Math.PI * 2,
-        height: -0.3 + Math.random() * 2.2
-      };
-      satellites.push(s);
-      scene.add(s);
+/* ================= SPARKS ================= */
+
+const sparkCount=200;
+const sparkGeo=new THREE.BufferGeometry();
+const sparkPos=new Float32Array(sparkCount*3);
+sparkGeo.setAttribute('position',new THREE.BufferAttribute(sparkPos,3));
+const sparkMat=new THREE.PointsMaterial({color:0xffcc00,size:0.15});
+const sparks=new THREE.Points(sparkGeo,sparkMat);
+sparks.visible=false;
+scene.add(sparks);
+const sparkVel=[];
+
+/* ================= SHOCK ================= */
+
+const shock=new THREE.Mesh(
+  new THREE.RingGeometry(0.5,0.7,64),
+  new THREE.MeshBasicMaterial({
+    color:0x00ffff,
+    side:THREE.DoubleSide,
+    transparent:true,
+    opacity:0.8
+  })
+);
+shock.rotation.x=Math.PI/2;
+shock.position.set(0,0,-5.8);
+shock.visible=false;
+scene.add(shock);
+
+/* ================= OCEAN ================= */
+
+const oceanGeo=new THREE.PlaneGeometry(400,400,100,100);
+const oceanMat=new THREE.MeshStandardMaterial({
+  color:0x001f3f,
+  wireframe:false
+});
+const ocean=new THREE.Mesh(oceanGeo,oceanMat);
+ocean.rotation.x=-Math.PI/2;
+ocean.position.y=-6;
+ocean.visible=false;
+scene.add(ocean);
+
+/* ================= SATELLITES ================= */
+
+const sats=[];
+for(let i=0;i<12;i++){
+  const sat=new THREE.Mesh(
+    new THREE.SphereGeometry(0.3,16,16),
+    new THREE.MeshStandardMaterial({color:0xffffff})
+  );
+  scene.add(sat);
+  sats.push(sat);
+}
+
+/* ================= POST FX ================= */
+
+const composer=new THREE.EffectComposer(renderer);
+composer.addPass(new THREE.RenderPass(scene,camera));
+
+const CrackShader={
+  uniforms:{
+    tDiffuse:{value:null},
+    impact:{value:new THREE.Vector2(0.5,0.5)},
+    time:{value:0},
+    strength:{value:0}
+  },
+  vertexShader:`
+    varying vec2 vUv;
+    void main(){
+      vUv=uv;
+      gl_Position=projectionMatrix*modelViewMatrix*vec4(position,1.0);
     }
-  }
+  `,
+  fragmentShader:`
+    uniform sampler2D tDiffuse;
+    uniform vec2 impact;
+    uniform float time;
+    uniform float strength;
+    varying vec2 vUv;
 
-  // Ocean (appears later)
-  let ocean = null;
-  function addOcean() {
-    if (ocean) return;
-    const geo = new THREE.PlaneGeometry(240, 240, 1, 1);
-    const tex = new THREE.TextureLoader().load("https://threejs.org/examples/textures/waternormals.jpg");
-    tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
-    tex.repeat.set(6, 6);
-    const mat = new THREE.MeshStandardMaterial({ map: tex, roughness: 1.0, metalness: 0.0 });
-    ocean = new THREE.Mesh(geo, mat);
-    ocean.rotation.x = -Math.PI / 2;
-    ocean.position.y = -2.9;
-    scene.add(ocean);
-  }
+    void main(){
+      vec2 uv=vUv;
+      float dist=distance(uv,impact);
+      float d=strength*0.2/(dist*12.0+0.2);
+      uv+=normalize(uv-impact)*d;
 
-  // Creature model (placeholder)
-  const loader = new THREE.GLTFLoader();
-  let creature = null;
+      float a=atan(uv.y-impact.y,uv.x-impact.x);
+      float cracks=abs(sin(a*20.0+time*2.0));
+      cracks*=smoothstep(0.0,0.5,1.0-dist);
 
-  function loadCreature() {
-    return new Promise((resolve, reject) => {
-      loader.load(
-        "https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/Parrot.glb",
-        (gltf) => {
-          creature = gltf.scene;
-          creature.scale.setScalar(0.05);
-          creature.position.set(0, 0.6, 0);
-          creature.userData.flyAway = false;
-          scene.add(creature);
-          resolve();
-        },
-        undefined,
-        reject
-      );
-    });
-  }
+      vec2 shift=normalize(uv-impact)*d*0.5;
 
-  // UI elements for cinematic beats
-  const inputBox = document.getElementById("inputBox");
-  const door = document.getElementById("door");
+      vec4 col;
+      col.r=texture2D(tDiffuse,uv+shift).r;
+      col.g=texture2D(tDiffuse,uv).g;
+      col.b=texture2D(tDiffuse,uv-shift).b;
+      col.a=1.0;
 
-  let timelineStarted = false;
-
-  async function runTimeline() {
-    if (timelineStarted) return;
-    timelineStarted = true;
-
-    // Beat 1: wait 2 seconds
-    await new Promise(r => setTimeout(r, 2000));
-
-    // Beat 2: load creature
-    await loadCreature();
-
-    // Beat 3: “tear apart” input box (shrink)
-    let scale = 1;
-    const shrinkTimer = setInterval(() => {
-      scale -= 0.06;
-      inputBox.style.transform = `translate(-50%, -50%) scale(${Math.max(scale, 0)})`;
-      inputBox.style.opacity = String(Math.max(scale, 0));
-      if (scale <= 0) {
-        clearInterval(shrinkTimer);
-        inputBox.remove();
-
-        // Beat 4: door appears
-        door.style.transform = "translate(-50%, -50%) scale(1)";
-
-        // Beat 5: satellites
-        createSatellites();
-
-        // Beat 6: ocean appears
-        setTimeout(addOcean, 700);
-
-        // Beat 7: “morph to bird and fly away”
-        setTimeout(() => { if (creature) creature.userData.flyAway = true; }, 1500);
-      }
-    }, 60);
-  }
-
-  runTimeline();
-
-  // Animation loop
-  const clock = new THREE.Clock();
-  function animate() {
-    requestAnimationFrame(animate);
-    const dt = clock.getDelta();
-    const t = clock.elapsedTime;
-
-    controls.update();
-
-    // Ocean scroll
-    if (ocean?.material?.map) {
-      ocean.material.map.offset.x += dt * 0.01;
-      ocean.material.map.offset.y += dt * 0.008;
+      col.rgb+=cracks*0.5*strength;
+      gl_FragColor=col;
     }
+  `
+};
 
-    // Satellite orbits around the door region (slightly behind camera center)
-    for (const s of satellites) {
-      const { radius, speed, phase, height } = s.userData;
-      const a = t * speed + phase;
-      s.position.set(Math.cos(a) * radius, height, Math.sin(a) * radius - 2);
-    }
+const crackPass=new THREE.ShaderPass(CrackShader);
+composer.addPass(crackPass);
 
-    // Creature motion
-    if (creature) {
-      // idle float
-      if (!creature.userData.flyAway) {
-        creature.position.y = 0.7 + Math.sin(t * 1.6) * 0.2;
-        creature.rotation.y += dt * 0.6;
-      } else {
-        // fly away
-        creature.position.y += dt * 4.2;
-        creature.position.z -= dt * 6.0;
-        creature.position.x += Math.sin(t * 2.0) * dt * 1.2;
-        creature.rotation.y += dt * 1.4;
-        if (creature.position.y > 80) creature.visible = false;
-      }
-    }
+/* ================= IMPACT ================= */
 
-    renderer.render(scene, camera);
+function impact(){
+  robot.scale.setScalar(1);
+  robot.position.z=-5.8;
+  impactLight.intensity=6;
+  shock.visible=true;
+  shock.scale.setScalar(0.1);
+  shock.material.opacity=1;
+  sparks.visible=true;
+
+  for(let i=0;i<sparkCount;i++){
+    sparkVel[i]=new THREE.Vector3(
+      (Math.random()-0.5)*12,
+      Math.random()*12,
+      (Math.random()-0.5)*12
+    );
   }
-  animate();
 
-  window.addEventListener("resize", () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
+  shards.forEach(s=>{
+    const d=s.position.distanceTo(robot.position);
+    if(d<5){
+      s.userData.broken=true;
+      s.userData.vel=
+        s.position.clone().sub(robot.position)
+        .normalize().multiplyScalar(10+Math.random()*5);
+    }
   });
 
-  // =========================================================
-  // OPENAI REALTIME VOICE (WEBRTC) — NO BROWSER SPEECH API
-  // =========================================================
-  const btnStartVoice = document.getElementById("btnStartVoice");
-  const btnStopVoice  = document.getElementById("btnStopVoice");
-  const statusEl = document.getElementById("status");
-  const remoteAudio = document.getElementById("remoteAudio");
+  crackPass.uniforms.strength.value=1;
+}
 
-  const setStatus = (s) => statusEl.textContent = "Status: " + s;
+/* ================= MORPH ================= */
 
-  let pc = null;
-  let dc = null;
-  let micStream = null;
+let morphed=false;
 
-  function stopVoice() {
-    try { dc && dc.close(); } catch(_) {}
-    try { pc && pc.close(); } catch(_) {}
-    dc = null; pc = null;
+function morphToBird(){
+  robot.children.forEach(c=>{
+    if(c.geometry) c.geometry.dispose();
+  });
+  robot.clear();
 
-    try { micStream && micStream.getTracks().forEach(t => t.stop()); } catch(_) {}
-    micStream = null;
+  const bird=new THREE.Mesh(
+    new THREE.ConeGeometry(1.5,4,32),
+    new THREE.MeshStandardMaterial({
+      color:0xffffff,
+      emissive:0x00ffff,
+      emissiveIntensity:0.5
+    })
+  );
+  bird.rotation.z=Math.PI;
+  robot.add(bird);
 
-    setStatus("idle");
+  morphed=true;
+}
+
+/* ================= LOOP ================= */
+
+const clock=new THREE.Clock();
+let hitTime=2;
+
+function animate(){
+  requestAnimationFrame(animate);
+
+  const dt=clock.getDelta();
+  const t=clock.elapsedTime;
+
+  if(t>hitTime && robot.scale.x<1){
+    impact();
   }
 
-  async function startVoice() {
-    if (pc) return;
-
-    setStatus("requesting mic");
-    pc = new RTCPeerConnection();
-
-    pc.ontrack = (e) => {
-      remoteAudio.srcObject = e.streams[0];
-      setStatus("connected / speaking");
-    };
-
-    micStream = await navigator.mediaDevices.getUserMedia({ audio:true });
-    micStream.getTracks().forEach(track => pc.addTrack(track, micStream));
-
-    dc = pc.createDataChannel("oai-events");
-    dc.onopen = () => {
-      setStatus("connected / listening");
-
-      // Session config is sent via /api/session; this update just sets behavior.
-      dc.send(JSON.stringify({
-        type: "session.update",
-        session: {
-          instructions: "You are Customer Care AI. Voice-only. Keep replies brief and helpful. Ask minimal questions.",
-          modalities: ["audio"]
-        }
-      }));
-
-      dc.send(JSON.stringify({
-        type: "response.create",
-        response: { modalities:["audio"], instructions:"Say: Customer Care AI online. How can I help?" }
-      }));
-    };
-
-    dc.onerror = () => setStatus("error");
-    dc.onclose = () => setStatus("closed");
-
-    setStatus("connecting");
-    const offer = await pc.createOffer();
-    await pc.setLocalDescription(offer);
-
-    // Unified interface: browser posts SDP to your server, which calls /v1/realtime/calls. :contentReference[oaicite:0]{index=0}
-    const r = await fetch("/api/session", {
-      method: "POST",
-      headers: { "Content-Type":"application/sdp" },
-      body: offer.sdp
-    });
-
-    if (!r.ok) throw new Error("session relay failed: " + r.status);
-    const answerSdp = await r.text();
-
-    await pc.setRemoteDescription({ type:"answer", sdp: answerSdp });
-    setStatus("connected / listening");
-  }
-
-  btnStartVoice.addEventListener("click", async () => {
-    try { await startVoice(); }
-    catch(e){ console.error(e); setStatus("error"); stopVoice(); }
+  arms.forEach((a,i)=>{
+    a.rotation.z=Math.sin(t*3+i)*0.5;
   });
 
-  btnStopVoice.addEventListener("click", () => stopVoice());
+  core.rotation.y+=0.02;
 
-  setStatus("idle");
-})();
+  shards.forEach(s=>{
+    if(s.userData.broken){
+      s.position.add(s.userData.vel.clone().multiplyScalar(dt));
+      s.userData.vel.y-=9.8*dt;
+      s.rotation.x+=0.2;
+      s.rotation.y+=0.3;
+    }
+  });
+
+  if(shock.visible){
+    shock.scale.multiplyScalar(1.12);
+    shock.material.opacity*=0.92;
+  }
+
+  if(sparks.visible){
+    const pos=sparks.geometry.attributes.position;
+    for(let i=0;i<sparkCount;i++){
+      pos.array[i*3]+=sparkVel[i].x*dt;
+      pos.array[i*3+1]+=sparkVel[i].y*dt;
+      pos.array[i*3+2]+=sparkVel[i].z*dt;
+      sparkVel[i].y-=9.8*dt;
+    }
+    pos.needsUpdate=true;
+  }
+
+  crackPass.uniforms.time.value+=dt;
+  if(crackPass.uniforms.strength.value>0){
+    crackPass.uniforms.strength.value*=0.95;
+  }
+
+  if(t>5 && !morphed){
+    ocean.visible=true;
+    morphToBird();
+  }
+
+  if(morphed){
+    robot.position.y+=dt*4;
+    robot.position.z+=dt*6;
+  }
+
+  sats.forEach((s,i)=>{
+    const angle=t*0.5+i;
+    s.position.set(
+      Math.cos(angle)*20,
+      Math.sin(angle*0.5)*5+10,
+      Math.sin(angle)*20
+    );
+  });
+
+  const verts=ocean.geometry.attributes.position;
+  for(let i=0;i<verts.count;i++){
+    const x=verts.getX(i);
+    const y=verts.getY(i);
+    verts.setZ(i,Math.sin(t*2+x*0.1+y*0.1)*0.5);
+  }
+  verts.needsUpdate=true;
+
+  composer.render();
+}
+
+animate();
+
 </script>
 </body>
 </html>
